[gd_scene load_steps=8 format=3 uid="uid://dq4ybpav14g74"]

[ext_resource type="Texture2D" uid="uid://dkdj2p0xou5hj" path="res://Assets/main.png" id="1_26pua"]
[ext_resource type="Script" path="res://menu.gd" id="1_35f8b"]
[ext_resource type="Texture2D" uid="uid://c4lplxwtpoh02" path="res://Assets/begineth.png" id="2_n8akp"]
[ext_resource type="Texture2D" uid="uid://cchmishgitugc" path="res://Assets/leave.png" id="4_10xyr"]

[sub_resource type="Gradient" id="Gradient_37b5o"]
colors = PackedColorArray(0.162066, 0.162066, 0.162066, 1, 0.273873, 0.273873, 0.273873, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_x0vmk"]
noise_type = 2
frequency = 0.0001

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_ybrti"]
color_ramp = SubResource("Gradient_37b5o")
noise = SubResource("FastNoiseLite_x0vmk")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_35f8b")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1200.0
offset_bottom = 900.0
texture = SubResource("NoiseTexture2D_ybrti")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("1_26pua")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="start" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_n8akp")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_constants/margin_right = 160

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Music" type="CheckButton" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
button_pressed = true
text = "Music"
expand_icon = true

[node name="SFX" type="CheckButton" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
button_pressed = true
text = "SFX"

[node name="salgo" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
texture_normal = ExtResource("4_10xyr")

[connection signal="button_down" from="MarginContainer/VBoxContainer/HBoxContainer/start" to="." method="_on_begin_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/Music" to="." method="_on_music_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer/SFX" to="." method="_on_sfx_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/HBoxContainer/salgo" to="." method="_on_salgo_button_down"]
